auth and userprofile endpoint implemented
